--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <header>
         <h1>Ejemplo de proyecto colaborativo</h1>
         <h2>este seria la descripcion del proyecto</h2>
+        <p>la lista de contribuyentes seria esta</p>
+        <ul>
+            <li> Bienvenido </li>
+            <li> Bienvenido fuji</li>
+        </ul>
     </header>
 </body>
 </html>
