Update index.html fechas de colaboradores añadidas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h2>este seria la descripcion del proyecto</h2>
         <p>la lista de contribuyentes seria esta</p>
         <ul>
-            <li> Bienvenido </li>
-            <li> Bienvenido fuji</li>
+            <li> Bienvenido 01/02</li>
+            <li> Bienvenido fuji 03/05</li>
         </ul>
     </header>
 </body>
