Update index.html jorge se a unido
jorge añadido a la lista de colaboradores

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li> Bienvenido 01/02</li>
             <li> Bienvenido fuji 03/05</li>
+            <li> Bienvenido Jorge 05/06</li>
         </ul>
     </header>
 </body>
